--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "(MIT OR Apache-2.0)",
   "description": "Shows a notification on websocket event",
   "dependencies": {
+    "less": "^2.7.2",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
     "socket.io": "^1.7.2",
@@ -13,7 +14,7 @@
   "main": "index.html",
   "window": {
     "show": false,
-    "show_in_taskbar": true,
+    "show_in_taskbar": false,
     "resizable": false,
     "always_on_top": true,
     "position": null,
