--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "less": "^2.7.2",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
+    "opn": "^4.0.2",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.2",
     "winston": "^2.3.0"
