set window wisible and invisible

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "window": {
     "show": false,
     "show_in_taskbar": false,
+    "transparent": true,
     "resizable": false,
     "always_on_top": true,
     "position": null,
