--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "(MIT OR Apache-2.0)",
   "description": "Shows a notification on websocket event",
   "dependencies": {
+    "jquery": "^3.1.1",
     "less": "^2.7.2",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
