Classes for generate notification window and notification message

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "main": "index.html",
   "window": {
-    "show": true,
+    "show": false,
     "show_in_taskbar": false,
     "transparent": false,
     "resizable": true,
