--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "main": "index.html",
   "window": {
+    "icon": "img/bell_iphone.png",
     "show": false,
     "show_in_taskbar": false,
     "transparent": false,
