--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "less": "^2.7.2",
     "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
-    "opn": "^4.0.2",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.2",
-    "socketio-wildcard": "^0.3.0",
-    "winston": "^2.3.0"
+    "socketio-wildcard": "^0.3.0"
   },
   "main": "index.html",
   "window": {
@@ -31,6 +29,8 @@
     "title": "NOTIFIER SETTINGS"
   },
   "devDependencies": {
+    "nw-builder": "^3.1.3",
     "nw-dev": "^3.0.1"
-  }
+  },
+  "repository": "github:andrew72ru/nwjs-socket.io"
 }
